Refactored TestResultSet and added test declarations